Fix grey border overflow

--- a/app/assets/stylesheets/views/_brexit-landing-page.scss
+++ b/app/assets/stylesheets/views/_brexit-landing-page.scss
@@ -52,7 +52,7 @@ hr.landing-page__divider {
 }
 
 .landing-page__section-list-wrapper {
-  margin-bottom: govuk-spacing(6);
+  margin: 0 0 govuk-spacing(6) 0;
   border-top: 1px solid govuk-colour("mid-grey", $legacy: "grey-2");
   padding-top: govuk-spacing(4);
 }
